Fix exported-kubelets on GKE >=1.11
K8s 1.11 [disables](https://github.com/kubernetes/kubernetes/pull/63881)
the separate cAdvisor port (4194) on kubelets.

In GKE >=1.11 this data must now be fetched from the same port/endpoint
as the rest of the metrics (under a separate path).
Add a `httpSeparateCadvisor` setting to support this.

--- a/helm/exporter-kubelets/templates/servicemonitor.yaml
+++ b/helm/exporter-kubelets/templates/servicemonitor.yaml
@@ -42,10 +42,17 @@ spec:
       insecureSkipVerify: true
       {{- end }}
     bearerTokenFile: /var/run/secrets/kubernetes.io/serviceaccount/token
-  {{- else }}
+  {{- else if .Values.httpSeparateCadvisor }}
   - port: http-metrics
     interval: 15s
   - port: cadvisor
+    interval: 30s
+    honorLabels: true
+  {{- else }}
+  - port: http-metrics
+    interval: 15s
+  - port: http-metrics
+    path: /metrics/cadvisor
     interval: 30s
     honorLabels: true
   {{- end }}
